// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block calculation can calculate some blocks 1 1`] = `
BlockSet {
  "blocks": Array [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1..1,024-0-beforeFirstRegion",
      "offsetPx": -1024,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 1024,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:1..1,024-0",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 0,
      "variant": undefined,
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 2048,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:1,025..2,048-0",
      "offsetPx": 1024,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 1024,
      "variant": undefined,
      "widthPx": 1024,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 2 1`] = `
BlockSet {
  "blocks": Array [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1..100-0-beforeFirstRegion",
      "offsetPx": -1024,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 100,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:1..100-0",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 100,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 0,
      "variant": undefined,
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1..100-0-rightpad",
      "offsetPx": 100,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": undefined,
      "widthPx": 2,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgB:101..200-1",
      "offsetPx": 102,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 200,
        "refName": "ctgB",
        "start": 100,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 100,
      "variant": undefined,
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgB:101..200-1-afterLastRegion",
      "offsetPx": 202,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 5 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "test",
      "end": 5120,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:4,097..5,120-0",
      "offsetPx": 4096,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 4096,
      "variant": undefined,
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 6144,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:5,121..6,144-0",
      "offsetPx": 5120,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 5120,
      "variant": undefined,
      "widthPx": 1024,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 6 1`] = `
BlockSet {
  "blocks": Array [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1..200-0-beforeFirstRegion",
      "offsetPx": -1024,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:1..200-0",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 200,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 0,
      "variant": undefined,
      "widthPx": 200,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1..200-0-rightpad",
      "offsetPx": 200,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": undefined,
      "widthPx": 2,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 1000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgB:1..1,000-1",
      "offsetPx": 202,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 0,
      "variant": undefined,
      "widthPx": 1000,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgB:1..1,000-1-afterLastRegion",
      "offsetPx": 1202,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 7 1`] = `
BlockSet {
  "blocks": Array [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1..200-0-beforeFirstRegion",
      "offsetPx": -1024,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:1..200-0",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 200,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 0,
      "variant": undefined,
      "widthPx": 200,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1..200-0-rightpad",
      "offsetPx": 200,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": undefined,
      "widthPx": 2,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 1000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgB:1..1,000-1",
      "offsetPx": 202,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 0,
      "variant": undefined,
      "widthPx": 1000,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgB:1..1,000-1-afterLastRegion",
      "offsetPx": 1202,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 8 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "test",
      "end": 2048,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgB:1,025..2,048-1",
      "offsetPx": 1224,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 1024,
      "variant": undefined,
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 3072,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgB:2,049..3,072-1",
      "offsetPx": 2248,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 2048,
      "variant": undefined,
      "widthPx": 1024,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 9 1`] = `
BlockSet {
  "blocks": Array [
    ContentBlock {
      "assemblyName": "test",
      "end": 4096,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:2,049..4,096-0",
      "offsetPx": 1024,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 2048,
      "variant": undefined,
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 6144,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:4,097..6,144-0",
      "offsetPx": 2048,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 4096,
      "variant": undefined,
      "widthPx": 1024,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 10 1`] = `
Array [
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "isLeftEndOfDisplayedRegion": undefined,
    "key": "{test}ctgA:101..152-0-beforeFirstRegion",
    "offsetPx": -1024,
    "refName": undefined,
    "regionNumber": undefined,
    "reversed": undefined,
    "start": undefined,
    "variant": "boundary",
    "widthPx": 1024,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 152,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:101..152-0",
    "offsetPx": 0,
    "parentRegion": Object {
      "assemblyName": "test",
      "end": 200,
      "refName": "ctgA",
      "start": 100,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": undefined,
    "start": 100,
    "variant": undefined,
    "widthPx": 1040,
  },
]
`;

exports[`reverse block calculation 1 1`] = `
BlockSet {
  "blocks": Array [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:8,977..10,000[rev]-0-reversed-beforeFirstRegion",
      "offsetPx": -1024,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:8,977..10,000[rev]-0-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 8976,
      "variant": undefined,
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 8976,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:7,953..8,976[rev]-0-reversed",
      "offsetPx": 1024,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 7952,
      "variant": undefined,
      "widthPx": 1024,
    },
  ],
}
`;

exports[`reversed displayed regions with elided region 1`] = `
BlockSet {
  "blocks": Array [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:1[rev]-0-reversed-beforeFirstRegion",
      "offsetPx": -800,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 800,
    },
    ElidedBlock {
      "assemblyName": "test",
      "elidedBlockCount": 0,
      "end": 1,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:1[rev]-0-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 1,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 0,
      "variant": undefined,
      "widthPx": 1,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:9,201..10,000[rev]-1-reversed",
      "offsetPx": 1,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 1,
      "reversed": true,
      "start": 9200,
      "variant": undefined,
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:8,401..9,200[rev]-1-reversed",
      "offsetPx": 801,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 1,
      "reversed": true,
      "start": 8400,
      "variant": undefined,
      "widthPx": 800,
    },
  ],
}
`;

exports[`reversed displayed regions without elided region 1`] = `
BlockSet {
  "blocks": Array [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:101..200[rev]-0-reversed-beforeFirstRegion",
      "offsetPx": -1024,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:101..200[rev]-0-reversed",
      "offsetPx": 0,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 200,
        "refName": "ctgA",
        "reversed": true,
        "start": 100,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 100,
      "variant": undefined,
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:101..200[rev]-0-reversed-rightpad",
      "offsetPx": 100,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": undefined,
      "widthPx": 2,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 600,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:501..600[rev]-1-reversed",
      "offsetPx": 102,
      "parentRegion": Object {
        "assemblyName": "test",
        "end": 600,
        "refName": "ctgA",
        "reversed": true,
        "start": 500,
      },
      "refName": "ctgA",
      "regionNumber": 1,
      "reversed": true,
      "start": 500,
      "variant": undefined,
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "isLeftEndOfDisplayedRegion": undefined,
      "key": "{test}ctgA:501..600[rev]-1-reversed-afterLastRegion",
      "offsetPx": 202,
      "refName": undefined,
      "regionNumber": undefined,
      "reversed": undefined,
      "start": undefined,
      "variant": "boundary",
      "widthPx": 1024,
    },
  ],
}
`;
